--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ polars = { version = "0.35.4", features = ["lazy", "json", "csv"] }
 clap = { version="4.4.11", features = ["derive"] }
 home = "0.5.9"
 thiserror = "1.0.51"
+serde = { version = "1.0.193", features = ["derive"] }
+serde_json = "1.0.108"
