--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-polars = { version = "0.35.4", features = ["lazy", "json", "csv"] }
+polars = { version = "0.35.4", features = ["lazy", "json", "csv", "round_series"] }
 clap = { version="4.4.11", features = ["derive"] }
 home = "0.5.9"
 thiserror = "1.0.51"
