--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ home = "0.5.9"
 thiserror = "1.0.51"
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
+chrono = "0.4.31"
