--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,4 +21,8 @@ jobs:
     - name: Run tests
       run: cargo test --verbose
     - name: Run release
+      uses: softprops/action-gh-release
+      with:
+        files: |
+          target/release/xctest_rs
       run: cargo build --release --verbose
